fine tune model level throttling object
Signed-off-by: Sicheng Song <sicheng.song@outlook.com>